--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,17 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.0",
-        "yiisoft/yii2": ">=2.0.13",
-        "yiisoft/yii2-bootstrap": "^2.0",
-        "yiisoft/yii2-swiftmailer": "^2.0",
-        "vlucas/phpdotenv": "~1.0@dev",
-        "nullref/yii2-useful": ">=0.0.4",
+        "mihaildev/yii2-ckeditor": "*",
+        "mihaildev/yii2-elfinder": "*",
         "nullref/yii2-core": ">=0.0.3",
         "nullref/yii2-full-admin": "dev-master",
-        "yiisoft/yii2-shell": "^2.0"
+        "nullref/yii2-useful": ">=0.0.4",
+        "unclead/yii2-multiple-input": "dev-master",
+        "vlucas/phpdotenv": "~1.0@dev",
+        "yiisoft/yii2": ">=2.0.13",
+        "yiisoft/yii2-bootstrap": "^2.0",
+        "yiisoft/yii2-shell": "^2.0",
+        "yiisoft/yii2-swiftmailer": "^2.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.2",
